[package]
name = "pybadge-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
embedded-alloc = "0.5.1"
embedded-graphics = "0.7.1"
pybadge-high = { version = "0.2.0", features = ["neopixel"] }
wasmi = { version = "0.31.2", default-features = false }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
